# ei

./: Cargo.toml  config.toml  readme.md
src/: cmd.rs  config.rs  error.rs  ipset.rs  iptables.rs  main.rs  rules.rs
src/auto/: cloudflare.rs  iplist.rs  mod.rs  resolver.rs
