[package]
name = "ei"
version = "0.1.0"
edition = "2021"
default-run = "eidamon"

[[bin]]
name = "eidamon"
path = "src/main.rs"

[[bin]]
name = "ei"
path = "src/bin/ei.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
femme = "2.2.1"
